--- a/witchie/witchie.xcodeproj/xcshareddata/xcschemes/witchie.xcscheme
+++ b/witchie/witchie.xcodeproj/xcshareddata/xcschemes/witchie.xcscheme
@@ -49,6 +49,12 @@
             ReferencedContainer = "container:witchie.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRAnalyticsDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
