--- a/witchie/witchie.xcodeproj/xcshareddata/xcschemes/witchie.xcscheme
+++ b/witchie/witchie.xcodeproj/xcshareddata/xcschemes/witchie.xcscheme
@@ -52,7 +52,7 @@
       <CommandLineArguments>
          <CommandLineArgument
             argument = "-FIRDebugEnabled"
-            isEnabled = "YES">
+            isEnabled = "NO">
          </CommandLineArgument>
          <CommandLineArgument
             argument = "-FIRAnalyticsDebugEnabled"
