--- a/witchie/GoogleService-Info.plist
+++ b/witchie/GoogleService-Info.plist
@@ -2,22 +2,18 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-	<key>CLIENT_ID</key>
-	<string>399074743547-b1cmkes46phhus476igqddjbfoo66976.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.399074743547-b1cmkes46phhus476igqddjbfoo66976</string>
 	<key>API_KEY</key>
-	<string>AIzaSyCmxhs8QyAu_pZ7ycvvQ38fr1JVLgx81ok</string>
+	<string>AIzaSyA7ZSkkp2pl26miMeDUgLpBZMaXkF1EGu0</string>
 	<key>GCM_SENDER_ID</key>
-	<string>399074743547</string>
+	<string>200935492119</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>br.ufpe.cin.academy.egln.witchie</string>
+	<string>br.ufpe.cin.academy.egln.witchie.dev</string>
 	<key>PROJECT_ID</key>
-	<string>witchie-test</string>
+	<string>witchie-dev</string>
 	<key>STORAGE_BUCKET</key>
-	<string>witchie-test.appspot.com</string>
+	<string>witchie-dev.appspot.com</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -29,8 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:399074743547:ios:01f286d103e7dcdce70c5e</string>
-	<key>DATABASE_URL</key>
-	<string>https://witchie-test-default-rtdb.firebaseio.com</string>
+	<string>1:200935492119:ios:17b379fb85bafa7a542a52</string>
 </dict>
 </plist>
